Support for prefixes and suffixes.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
 <input id="times" type="text" value="5"></input>
 
+<p>Prepend this prefix to each line:</p>
+
+<input id="prefix" type="text" value=""></input>
+
+<p>Append this suffix to each line:</p>
+
+<input id="suffix" type="text" value=""></input>
+
 <br />
 <br />
 
